--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NDT Plast | Streç Film Üretimi</title>
-  <meta name="description" content="NDT Plast — Endüstriyel ve gıda uyumlu streç film üretimi. Yüksek şeffaflık, güçlü yapışma, esneklik ve özel ölçü seçenekleri."/>
+  <title>NDT Plast | Streç Film</title>
+  <meta name="description" content="NDT Plast — Endüstriyel ve gıda uyumlu streç film. Yüksek şeffaflık, güçlü yapışma, esneklik ve özel ölçü seçenekleri."/>
   <meta name="theme-color" content="#0b72b9" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -103,17 +103,17 @@
       <div class="bg" aria-hidden="true"></div>
       <div class="container grid" style="grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:2rem;align-items:center;">
         <div>
-          <span class="pill">Streç Film Üretimi</span>
+          <span class="pill">Streç Film</span>
           <h1>Dayanıklı, şeffaf ve verimli çözümler</h1>
-          <p>NDT Plast; palet streç, mini streç ve gıda uyumlu streç film üretir. Özel ebat, mikron ve metraj seçenekleri ile tedarik sürecinizi hızlandırır.</p>
+          <p>NDT Plast; palet streç, manuel streç ve gıda streç film. Özel ebat, mikron ve metraj seçenekleri ile tedarik sürecinizi hızlandırır.</p>
           <div style="display:flex;gap:.8rem;flex-wrap:wrap;margin-top:1rem">
             <a href="#teklif" class="btn">Fiyat Teklifi Al</a>
             <a href="#urunler" class="btn ghost">Ürün Kataloğu</a>
           </div>
           <div class="grid kpis" style="margin-top:1.2rem">
-            <div class="kpi"><div class="muted">Saatlik kapasite</div><div style="font-weight:800;font-size:1.3rem">600+ kg</div></div>
-            <div class="kpi"><div class="muted">Standart mikron</div><div style="font-weight:800;font-size:1.3rem">12–30 µm</div></div>
-            <div class="kpi"><div class="muted">Esneme</div><div style="font-weight:800;font-size:1.3rem">%150–300</div></div>
+            <div class="kpi"><div class="muted">Ürün Eni</div><div style="font-weight:800;font-size:1.3rem">10-50cm</div></div>
+            <div class="kpi"><div class="muted">Standart mikron</div><div style="font-weight:800;font-size:1.3rem">8–30 µm</div></div>
+            <div class="kpi"><div class="muted">Yüksek Esneklik</div><div style="font-weight:800;font-size:1.3rem">%150–300</div></div>
           </div>
         </div>
         <figure class="figure" aria-label="Streç film görsel simülasyon">
@@ -135,7 +135,7 @@
           <div class="grid cards">
             <article class="card">
               <h3>Palet Streç</h3>
-              <p class="muted">Makine ve manuel kullanım. 12–30 µm, 40–50 cm en, yüksek yapışma.</p>
+              <p class="muted">Makine ve manuel kullanım. 8–30 µm, 10–50 cm en, yüksek yapışma.</p>
               <ul class="list">
                 <li>Yük sabitleme ve darbe dayanımı</li>
                 <li>Düşük sarım maliyeti / palet</li>
@@ -143,30 +143,28 @@
               </ul>
             </article>
             <article class="card">
-              <h3>Mini Streç</h3>
-              <p class="muted">10–12.5 cm en. Hızlı paketleme ve lojistik operasyonları.</p>
+              <h3>Dilimli ve Manuel Streç</h3>
+              <p class="muted">10–50 cm en. Hızlı paketleme ve lojistik operasyonları.</p>
               <ul class="list">
                 <li>Pratik el tipi uygulama</li>
                 <li>Opsiyonel sap ve özel metraj</li>
-                <li>Dar ürün grupları için ideal</li>
+                <li>Birçok ürün grubu için ideal</li>
               </ul>
             </article>
             <article class="card">
-              <h3>Gıda Uyumlu Streç</h3>
+              <h3>Gıda Streç</h3>
               <p class="muted">Gıda ile temas edebilir hammadde ve üretim standardı.</p>
               <ul class="list">
                 <li>Yüksek şeffaflık ve parlaklık</li>
                 <li>Koku ve tat geçirmez</li>
-                <li>Talep halinde belgelendirme</li>
               </ul>
             </article>
             <article class="card">
               <h3>Özel Üretim</h3>
-              <p class="muted">UV, renkli, baskılı veya delikli çözümler.</p>
+              <p class="muted">Slaj, Renkli, Döner, Pre-Strech</p>
               <ul class="list">
-                <li>OEM etiketleme</li>
-                <li>İhracata uygun paketleme</li>
-                <li>Hızlı numune akışı</li>
+                <li>Her talebe uygun çözüm.</li>
+                <li>Hızlı ve kaliteli ürün garantisi</li>
               </ul>
             </article>
           </div>
@@ -183,12 +181,12 @@
             <table class="table">
               <thead><tr><th>Parametre</th><th>Aralık</th><th>Açıklama</th></tr></thead>
               <tbody>
-                <tr><td>Kalınlık</td><td>12–30 µm</td><td>Operasyona göre optimize</td></tr>
-                <tr><td>Esneme</td><td>%150–300</td><td>Makine tipine uyumlu</td></tr>
-                <tr><td>Yapışma</td><td>Orta–Yüksek</td><td>Sarım stabilitesi</td></tr>
+                <tr><td>Kalınlık</td><td>8–30 µm</td><td>Operasyona göre optimize</td></tr>
+                <tr><td>Esneme</td><td>%150–%300</td><td>Makine tipine uyumlu</td></tr>
+                <tr><td>Yapışma</td><td>Yapışkansız-Orta–Yüksek</td><td>Sarım stabilitesi</td></tr>
                 <tr><td>Şeffaflık</td><td>Yüksek</td><td>Barkod okuma kolaylığı</td></tr>
                 <tr><td>En</td><td>10–50 cm</td><td>Mini ve palet seçenekleri</td></tr>
-                <tr><td>Metraj</td><td>200–3000 m</td><td>Özel metraj mümkün</td></tr>
+                <tr><td>Metraj</td><td>50–8000 m</td><td>Özel metraj mümkün</td></tr>
               </tbody>
             </table>
           </div>
